#5 - correção ortografica conclusão

--- a/textuais/conclusao.tex
+++ b/textuais/conclusao.tex
@@ -4,36 +4,36 @@
 Do início ao fim deste trabalho de conclusão de curso, alguns conceitos foram apresentados
 e demonstrados a respeito do consumo de energia elétrica, visando criar um cenário
 comparativo a respeito da situação energética do país. Ao longo dos anos o povo brasileiro
-ouviu sobre propostas na melhoria do meio ambiente, sustentáveis e até
-melhoria na infraestrutura urbana. Porém na maiora das vezes nunca passou de apenas propostas.
+ouviu sobre propostas na melhoria do meio ambiente, propostas sustentáveis e até
+melhoria na infraestrutura urbana. Porém na maioria das vezes nunca passou de apenas propostas.
 
 Por meio do estudo realizado neste trabalho constatou-se que a leitura do
-consumo energético feita em tempo real e disponibilizada para o usuário de uma maneira entendível e direta
+consumo energético feita em tempo real e disponibilizada para o usuário de uma maneira entendível e direta, 
 desperta a curiosidade e consequentemente a conscientização do mesmo. Apenas mostrar os resultados coletados não seria suficiente
 para a conscientização do cidadão brasileiro, a forma com que os resultados são relatados para o consumidor tem um grande impacto, pois
 no momento em que a unidade de medida do consumo de energia elétrica é "trocada" do quilowatt-hora para a moeda em circulação no país, o real, 
-faz com que todos os brasileiros independente da classe social ou do grau de escolaridade entenda o quanto tem se consumido e disperdiçado em sua residência.
+faz com que todos os brasileiros independente da classe social ou do grau de escolaridade entenda o quanto tem se consumido e desperdiçado em sua residência.
 
-Este trabalho traz uma solução eficiente no monitoramento de energia elétrica, tanto no ambito do \textit{software} como na comunicação com 
+Este trabalho traz uma solução eficiente no monitoramento de energia elétrica, tanto no âmbito do \textit{software} como na comunicação com 
 \textit{hardware}. O Sistema foi pensado de tal maneira que mesmo em que não exista a presença de um \textit{hardware} para controlar os dispositivos físicos
 o utente possa, ainda sim, monitorar os seus gatos por meio das simulações que levam em conta o consumo esperado do dispositivo. A facilidade de estabelecer 
 a comunicação entre servidor \textit{web} e outros dispositivos físicos, traz a possibilidade do usuário poder sempre expandir e melhorar as formas
 de monitoramento de energia em sua residência. Além disso o trabalho implementa um novo padrão para se mensurar o consumo da energia elétrica nas
-residências, no lugar do complexo quilowatt-hora, medida que atualment é utilizada para quantificação do consumo energético, o \textit{power monitor}
+residências, no lugar do complexo quilowatt-hora, medida que atualmente é utilizada para quantificação do consumo energético, o \textit{power monitor}
 explora uma abordagem mais simples e mais perto do dia a dia de todo brasileiro, mensura todo o consumo de energia elétrica da residência em 
 reais, moeda em circulação no país. 
 
-A troca do quilowatt-hora pela moeda real, faz com que o consumidor entenda a verdadeira situção da sua conta de energia, possibilitando um melhor planejamento
-financeiros e o insentivo a consumir apenas o que é necessário. Apesar do sistema atingir os resultados esperados, existem algumas melhorias 
+A troca do quilowatt-hora pela moeda real, faz com que o consumidor entenda a verdadeira situação da sua conta de energia, possibilitando um melhor planejamento
+financeiros e o incentivo a consumir apenas o que é necessário. Apesar do sistema atingir os resultados esperados, existem algumas melhorias 
 que podem ser consideradas para trabalhos futuros. A primeira seria criar um \textit{hardware} mas robusto, onde adicionaria um Arduino Uno
 que contribuiria com mais entradas analógicas e digitais, isso influenciaria em uma maior acoplação de relés que por sua vez
-influencia na quantidade de eletrodomesticos adicionados ao \textit{power monitor}, o arduino por sua vez se comunicaria via conexão serial 
+influencia na quantidade de eletrodomésticos adicionados ao \textit{power monitor}, o arduino por sua vez se comunicaria via conexão serial 
 com o NodeMCU. A Segunda melhoria seria em relação ao monitoramento da tensão em um dispositivo ligado, a inclusão de um sensor de tensão 
-seria a melhor opção para poder se obter a potêncial real que o dispositivo consome. A última mudança a ser destacada é na parte do 
+seria a melhor opção para poder se obter a potencial real que o dispositivo consome. A última mudança a ser destacada é na parte do 
 \textit{software}, melhorias em relação ao servidor \textit{web} como por exemplo, maior segurança nos dados armazenados, possibilidade para criação
 de mais usuários, segurança nas transações de informação com o \textit{hardware} e com a interface \textit{web} e um aumento nos \textit{end-points}
 que acarretaria em uma maior disponibilidade de dados. Na parte da interface \textit{web} as melhorias seriam direcionadas a correção de \textit{bugs} 
 existentes na primeira versão e uma melhor estruturação para que se possibilite uma customização do usuário em relação aos dados em que ele deseja visualizar.
 
 Em conclusão o sistema proposto por este trabalho, supre as necessidades de gerenciamento dos equipamentos eletrônicos
-presente em uma residência e de um melhor entendimento em relação aos gastos e disperdícios de energia elétrica.
+presente em uma residência e de um melhor entendimento em relação aos gastos e desperdícios de energia elétrica.
