#5 - ajuste das referências

--- a/bibliografia/referencias.bib
+++ b/bibliografia/referencias.bib
@@ -80,6 +80,7 @@
   title = {O que s{\~a}o as redes inteligentes de energia},
   url = {http://www.cemig.com.br/pt-br/A_Cemig_e_o_Futuro/sustentabilidade/nossos_programas/Redes_Inteligentes/Paginas/as_redes_inteligentes.aspx},
   urldate = {2017-06-01},
+  year = 2017,
   org-short={Smart Grid}
 }
 
@@ -88,5 +89,6 @@
   title = {Evoluç{\^a}o dos custos com energia},
   url = {http://www.portaldaindustria.com.br/agenciacni/noticias/2015/06/precos-de-insumos-importados-e-da-energia-puxam-a-alta-de-08-nos-custos-da-industria/},
   urldate = {2015},
+  year = 2015,
   org-short={Evolução Tarifa}
 }
