#5 - inclusão das últimas informações

--- a/main.tex
+++ b/main.tex
@@ -46,10 +46,10 @@
 % Informações de dados para CAPA e FOLHA DE ROSTO
 % ---
 
-\titulo{{\normalfont \textbf{Título do seu Trabalho}}}
+\titulo{{\normalfont \textbf{Monitoramento de energia de baixo custo de uso doméstico e customizável}}}
 \autor{Jonathan da Silva Braga}
 \local{Natal -- RN}
-\data{Dezembro de 2017}
+\data{Junho de 2018}
 \instituicao{
   Universidade Federal do Rio Grande do Norte -- UFRN
   \par
@@ -63,7 +63,7 @@
 \preambulo{Trabalho de Conclusão de Curso de Engenharia Mecatrônica da Universidade Federal do Rio Grande do Norte, apresentado como requisito parcial para a obtenção do grau de Bacharel em Engenharia Mecatrônica
 \newline 
 \newline 
-Orientador: John Doe}
+Orientador: Carlos Manuel Dias Viegas}
 
 % Configurações de aparência do PDF final
 % alterando o aspecto da cor azul
@@ -123,7 +123,7 @@ Orientador: John Doe}
 	\vspace*{\fill}
 	\centering
 	\noindent
-	\textit{Escreva aqui sua dedicatórss}
+	\textit{Este trabalho é dedicado a Marta e Osmildo.}
 	 \vspace*{\fill}
 \end{dedicatoria}
 
@@ -179,10 +179,9 @@ Orientador: John Doe}
 
 % inserir lista de símbolos
 \begin{simbolos}
-  \item[$ \Gamma $] Letra grega Gama
-  \item[$ \Lambda $] Lambda
-  \item[$ \zeta $] Letra grega minúscula zeta
-  \item[$ \in $] Pertence
+  \item[$ GWh $] Gigawatt-hora
+  \item[$ KWh $] Quilowatt-hora
+  \item[$ R\$ $] Moeda corrente oficial da República Federativa do Brasil
 \end{simbolos}
 
 % inserir o sumario
