--- a/pre-textuais/agradecimentos.tex
+++ b/pre-textuais/agradecimentos.tex
@@ -1,4 +1,19 @@
 \begin{agradecimentos}
-Escreva aqui seus agradecimentos.
+
+    Este trabalho não poderia ser concluído sem a ajuda de diversas pessoas as
+    quais presto minha homenagem:
+
+    Ao meu orientador Professor Dr. Carlos Manuel Dias Viegas, pela paciência,
+    confiança e ideias que tornaram possível a elaboração deste trabalho.
+
+    Aos meus pais, Osmildo e Marta, que tanto me guiaram, me incentivaram e
+    me apoiaram a crescer espiritualmente e profissionalmente, a minha irmã Catherine e ao meu cunhado Talis,
+    que sempre foram um exemplo de perseverança e nunca deixaram de acreditar em mim.
+
+    À minha companheira Juliana por ter me incentivado e me apoiado em todos
+    os momentos.
+
+    À toda a minha família e a todos os meus amigos, pois, sem eles, isso não
+    seria possível.
 
 \end{agradecimentos}
