--- a/pre-textuais/folha-de-aprovacao.tex
+++ b/pre-textuais/folha-de-aprovacao.tex
@@ -20,7 +20,7 @@
 	
 	
 	\setlength{\ABNTEXsignwidth}{14cm}
-	\assinatura{\textbf{Prof. Dr. John Doe - Orientador} \\ UFRN} 
+	\assinatura{\textbf{Prof. Dr. Carlos Manuel Dias Viegas - Orientador} \\ UFRN} 
 	\assinatura{\textbf{Prof. Dr. Cicrano da Silva - Coorientador} \\ UFRN}
 	\assinatura{\textbf{MSc. Alguém externo - Convidado} \\ Empresa ou instituição }
 	
