--- a/pre-textuais/agradecimentos.tex
+++ b/pre-textuais/agradecimentos.tex
@@ -3,6 +3,8 @@
     Este trabalho não poderia ser concluído sem a ajuda de diversas pessoas as
     quais presto minha homenagem:
 
+    A Deus, pois sem ele eu não existiria e não conseguiria chegar onde cheguei.
+
     Ao meu orientador Professor Dr. Carlos Manuel Dias Viegas, pela paciência,
     confiança e ideias que tornaram possível a elaboração deste trabalho.
 
