--- a/main.tex
+++ b/main.tex
@@ -46,16 +46,16 @@
 % Informações de dados para CAPA e FOLHA DE ROSTO
 % ---
 
-\titulo{{\normalfont \textbf{Monitoramento de energia de baixo custo de uso doméstico e customizável}}}
-\autor{Jonathan da Silva Braga}
-\local{Natal -- RN}
-\data{Junho de 2018}
+\titulo{{\normalfont \textbf{PROPOSTA DE UMA FERRAMENTA DE BAIXO CUSTO PARA O MONITORAMENTO DE ENERGIA RESIDENCIAL}}}
+\autor{JONATHAN DA SILVA BRAGA}
+\local{NATAL -- RN}
+\data{JUNHO DE 2018}
 \instituicao{
-  Universidade Federal do Rio Grande do Norte -- UFRN
+  UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE
   \par
-  Departamento de Engenharia de Computação e Automação -- DCA
+  CENTRO DE TECNOLOGIA
   \par
-  Curso de Engenharia Mecatrônica
+  GRADUAÇÃO EM ENGENHARIA MECATRÔNICA
 
 }
 \tipotrabalho{Relatório técnico}
@@ -110,8 +110,27 @@ Orientador: Carlos Manuel Dias Viegas}
 \pretextual
 
 % Capa
-\imprimircapa
+%\imprimircapa
+\begin{titlingpage}
+	\begin{center}
+		UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE \\
+		CENTRO DE TECNOLOGIA \\
+		GRADUAÇÃO EM ENGENHARIA MECATRÔNICA
 
+		\vspace*{1cm}
+
+		JONATHAN DA SILVA BRAGA
+
+		\vspace*{\fill}
+		\textbf{PROPOSTA DE UMA FERRAMENTA DE BAIXO CUSTO PARA O MONITORAMENTO DE ENERGIA RESIDENCIAL}
+		\vspace*{\fill}
+
+		NATAL -- RN\\
+		JUNHO DE 2018
+		\vspace*{0.5cm}
+
+	\end{center}
+\end{titlingpage}
 % Folha de rosto
 \imprimirfolhaderosto
 
