#6 -começo dos ajustes da introdução

--- a/bibliografia/referencias.bib
+++ b/bibliografia/referencias.bib
@@ -92,3 +92,12 @@
   year = 2015,
   org-short={Evolução Tarifa}
 }
+
+@misc{crise-hidrica-2015,
+  author = {Litza Mattos},
+  title = {Crise H{\'i}drica de 2015 pode ser a mais grave dos {\'u}ltimos anos},
+  url = {https://www.otempo.com.br/capa/brasil/crise-h%C3%ADdrica-de-2015-pode-ser-a-mais-grave-dos-%C3%BAltimos-anos-1.1042347},
+  urldate = {2015},
+  year = 2015,
+  org-short={O Tempo}
+}
