#6 - ajustes na introdução

--- a/bibliografia/referencias.bib
+++ b/bibliografia/referencias.bib
@@ -101,3 +101,30 @@
   year = 2015,
   org-short={O Tempo}
 }
+
+@misc{energia-desenvolvimento,
+  author = {José Goldemberg},
+  title = {Energia e desenvolvimento},
+  url = {http://www.scielo.br/scielo.php?script=sci_arttext&pid=S0103-40141998000200002},
+  urldate = {1998},
+  year = 1998,
+  org-short={DOSSIÊ RECURSOS NATURAIS}
+}
+
+@misc{governo-preve,
+  author = {Renato Andrade},
+  title = {Governo prev{\^e} at{\'e} 2020 mais 24 hidrel{\'e}tricas},
+  url = {https://economia.estadao.com.br/noticias/geral,governo-preve-ate-2020-mais-24-hidreletricas-imp-,727860},
+  urldate = {2011},
+  year = 2011,
+  org-short={O Estado}
+}
+
+@misc{energia-abastece,
+  author = {Governo},
+  title = {Energia para abastecer 40\% do consumo residencial do Pa{\'i}s},
+  url = {http://www.brasil.gov.br/editoria/infraestrutura/2011/12/energia-para-abastecer-40-do-consumo-residencial-do-pais},
+  urldate = {2011},
+  year = 2011,
+  org-short={Governo}
+}
