--- a/pre-textuais/resumo.tex
+++ b/pre-textuais/resumo.tex
@@ -2,11 +2,10 @@
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
 
-Este trabalho consiste no desenvolvimento de um sistema domiciliar de monitoramento de energia elétrica, em tempo real e totalmente customizável.
+Este trabalho consiste no desenvolvimento de um sistema domiciliar de monitoramento de energia elétrica de baixo custo, em tempo real.
 Tem como proposta um dispositivo e um sistema que juntos somam a nova realidade de meios para a economia de energia.
-O equipamento tem como base a plataforma de prototipagem NodeMCU que possui o microcontrolador ESP8266 acoplado em seu circuito integrado,
-o circuito que é controlado pelo NodeMCU possui um sensor de corrente que afere o consumo em tempo real de um dispositivo e, através
-do envio desses dados a um servidor onde possui comunicação com um agente consumidor, é possível acompanhar todo o consumo de energia elétrica em tempo real.
+O equipamento tem como base a placa de desenvolvimento NodeMCU e um sensor de corrente que afere o consumo em tempo real de um dispositivo. Através
+dos dados coletados e dos cálculos realizados pelo sistema é possível acompanhar o consumo de energia elétrica de uma forma mais fácil.
 O intuito é que o constante monitoramento possa trazer uma conscientização da economia de energia.
  
  \noindent
@@ -17,7 +16,12 @@ O intuito é que o constante monitoramento possa trazer uma conscientização da
 \begin{resumo}[Abstract]
 	\begin{otherlanguage*}{english}	
 	
-	This work consists of the development of a real-time home monitoring system for electricity, which is fully customizable. It proposes a device and a system that together add the new reality of means for energy saving. The equipment is based on the NodeMCU prototyping platform that has the ESP8266 microcontroller coupled to its integrated circuit, the circuit that is controlled by the NodeMCU has a current sensor that measures the real time consumption of a device and, by sending this data to a server where you have communication with a consumer agent it is possible to monitor all the consumption of electricity in real time. The intention is that constant monitoring can bring an awareness of energy savings.
+	
+This work consists of the development of a real-time home monitoring system for electricity, which is fully customizable.
+It proposes a device and a system that together add the new reality of means for energy saving.
+The equipment is based on the NodeMCU development board and a current sensor that measures the real time consumption of a device. Through
+the data collected and the calculations performed by the system, it is possible to monitor the electricity consumption in an easier way.
+The intention is that constant monitoring can bring an awareness of energy savings.
 	
 	\vspace{\onelineskip}
 	\noindent 
