#6 Ajustes no capítulo 2

--- a/bibliografia/referencias.bib
+++ b/bibliografia/referencias.bib
@@ -128,3 +128,58 @@
   year = 2011,
   org-short={Governo}
 }
+
+
+@misc{ref-nodejs,
+  author = {Priyesh Patel},
+  title = {What exactly is Node.js?},
+  url = {http://www.brasil.gov.br/editoria/infraestrutura/2011/12/energia-para-abastecer-40-do-consumo-residencial-do-pais},
+  urldate = {2018},
+  year = 2018,
+  org-short={Priyesh Patel}
+}
+
+@misc{ref-js,
+  author = {Andrei Longen},
+  title = {O que {\'e} JavaScript? Conheça essa linguagem de programaç{\~a}o},
+  url = {https://www.weblink.com.br/blog/programacao/o-que-e-javascript/},
+  urldate = {2018},
+  year = 2018,
+  org-short={Andrei Longen}
+}
+
+@misc{ref-jsmobile,
+  author = {Felipe Blini},
+  title = {Desenvolvimento de Aplicativos M{\'o}veis com Javascript: Ionic, React Native e NativeScript. Qual escolher?},
+  url = {https://goo.gl/h5ei9F},
+  urldate = {2016},
+  year = 2016,
+  org-short={Felipe Blini}
+}
+
+@misc{ref-handshake,
+  author = {Wild David},
+  title = {Handshake ou aperto de mão},
+  url = {http://wdredes.blogspot.com/2011/05/handshake-ou-aperto-de-mao.html},
+  urldate = {2011},
+  year = 2011,
+  org-short={Wild David}
+}
+
+@misc{ref-sqlhisto,
+  author = {Ricardo Rezende},
+  title = {Desvendando a SQL},
+  url = {https://www.devmedia.com.br/desvendando-a-sql-parte-1/28328},
+  urldate = {2013},
+  year = 2013,
+  org-short={Ricardo Rezende}
+}
+
+@misc{ref-esp8266h,
+  author = {ROBOCORE},
+  title = {M{\'o}dulo WiFi - ESP8266},
+  url = {https://www.robocore.net/loja/produtos/modulo-wifi-esp8266.html},
+  urldate = {2014},
+  year = 2014,
+  org-short={ROBOCORE}
+}
