--- a/main.tex
+++ b/main.tex
@@ -194,6 +194,7 @@ Orientador: Carlos Manuel Dias Viegas}
 \item[CEMIG]  \textit{Comapanhia Energética de Minas Gerais}
 \item[SIN]    \textit{Sistema Interligado Nacional}
 \item[IBGE]    \textit{Instituto Brasileiro de Geografia e Estatística}
+\item[SOC]    \textit{System on a Chip}
 \end{siglas}
 
 % inserir lista de símbolos
